<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c9c9c9"
    tools:context="com.nyc.justinstanger.myapplication.SearchActivity">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="Search By Title"
        android:textColorHint="#70000000"
        android:textColor="#000"
        />

    <ImageButton
        android:layout_alignParentEnd="true"
        android:id="@+id/search_submit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_send_black_24dp"
        />
</LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_centerHorizontal="true"
        android:id="@+id/search_recycler_view"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>
</LinearLayout>
