...
                android:layout_weight="1"
                android:layout_height="wrap_content"
                />

                <ImageButton
                    android:layout_alignParentBottom="true"
                    android:id="@+id/search"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#c9c9c9"

                    android:background="@drawable/ic_search_black_24dp"

...
